src/test/DuplicateVar/DuplicateVar.expected
error: DuplicateVar.panda:3:9: 'i' was already defined at DuplicateVar.panda:2:5
error: DuplicateVar.panda:8:9: 'name' was already defined at DuplicateVar.panda:1:5
error: DuplicateVar.panda:11:5: 'name' was already defined at DuplicateVar.panda:1:5
3 errors
