src/test/DuplicateVar/DuplicateVar.panda
var name := "Hello"
for i in 0 .. 11 {
    for i in 0 .. 6 {
        Console.writeLine(i)
    }
}
for i in 0 .. 10 {
    var name := "Goodbye"
    Console.writeLine(name)
}
var name := "Done!"
